Hide scrollbar for horizontal layout adjustments in style.css, minor spacing fixes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,6 +32,10 @@ body {
   align-items: center;
 }
 
+::-webkit-scrollbar {
+  display: none;
+}
+
 /*******************************
           FONTS
 *******************************/
@@ -365,7 +369,7 @@ body {
 }
 
 .places__ListItem {
-  height: 15%;
+  height: 10rem;
   width: 100%;
   display: flex;
   justify-content: space-around;
@@ -419,7 +423,8 @@ body {
 .places__ListItem-Photo {
   height: 100%;
   width: 15%;
-  background-size: contain;
+  object-fit: cover;
+  object-position: center;
 }
 
 .places__ListItem-Name {
@@ -549,16 +554,15 @@ body {
           FINAL PAGE
 *******************************/
 .final__Container{
-  width:100%;
-  height:100%;
-  display:flex;
+  width: 100%;
+  height: 100%;
+  display: flex;
   align-items: center;
   flex-direction: column;
-  justify-content: flex-start;
-  margin-top:5%;
+  justify-content: space-evenly;
   font-family: interstate, sans-serif;
   font-style: normal;
-  font-size:2rem;
+  font-size: 2rem;
 }
 .final__Container .trip{
   width:80%;
@@ -573,10 +577,17 @@ body {
   justify-content: flex-start;
   align-items: flex-start;
   text-align: left;
-  width:50%;
-  margin:25px;
+  margin:2rem;
 }
 .final__Logo{
   font-weight: 700;
   font-size: 10rem;
+}
+.final__ListContainer {
+  height: 65%;
+  width: 50%;
+  padding: 4rem;
+  background-color: rgba(255, 255, 255, 0.75);
+  border-radius: 5px;
+  overflow: auto;
 }
